# tdkg

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: examples.py
tdkg/: __init__.py  graph.py  node.py
tests/: test_graph.py
