[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdkg"
version = "0.1.2"
description = "Time Decayed Knowledge Graph for AI memory systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Siddhant Sukhatankar" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sidvsukhi/tdkg"
Repository = "https://github.com/sidvsukhi/tdkg"